<resources>
    <string name="app_name">Pro1</string>
    <string name="nombres">Nombres</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="play">Play</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="zero">Zero</string>
    <string name="six">Six</string>
</resources>
